--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "neel_distill"
-title: "&quot;Neel Chaudhari, Data Analytics/Statistician"
+title: "Neel Chaudhari, Data Analytics/Statistician"
 description: |
   &quot;Neel Chaudhari, Data Analytics/Statistician
 output_dir: "_site"
