--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "neel_distill"
-title: "Neel Chaudhari, Data Analytics/Statistician"
+title: "Neel Chaudhari"
 theme: "theme_neel.css"
 output_dir: "_site"
 navbar:
