--- a/_site.yml
+++ b/_site.yml
@@ -10,4 +10,8 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - text: "Blog"
+      href: Blog.html
+    - text: "Resume"
+      href: resume.pdf
 output: distill::distill_article
