--- a/_site.yml
+++ b/_site.yml
@@ -10,8 +10,8 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
-    - text: "Blog"
-      href: Blog.html
+    - text: "Projects"
+      href: projects.html
     - text: "Resume"
       href: resume.pdf
 output: distill::distill_article
